<resources>
    <string name="app_name">Vinilos</string>
    <string name="bienvenidos">Bienvenido!</string>
    <string name="albums">Albumes</string>
    <string name="artistas">Artistas</string>
    <string name="descripcion">Descripcion:</string>
    <string name="fecha_de_salida_al_mercado">Fecha de salida:</string>
    <string name="genero">Genero:</string>
    <string name="casa_discografica">Casa Discografica:</string>
    <string name="tracks">Tracks:</string>
    <string name="track_x">Track x</string>
    <string name="no_hay_tracks_registrados">No hay tracks registrados</string>
    <string name="no_hay_artistas_registrados">No hay artistas registrados</string>
    <string name="no_hay_albumes_registrados">No hay albumes registrados</string>
    <string name="no_hay_coleccionistas_registrados">No hay coleccionistas registrados</string>
    <string name="coleccionistas">Coleccionistas</string>
    <string name="coleccionista_x">Coleccionista x</string>
    <string name="artistas_favoritos">Artistas favoritos:</string>
    <string name="no_hay_artistas_favoritos">No hay artistas favoritos</string>
    <string name="el_coleccionista_no_tiene_albumes">El coleccionista no tiene albumes</string>
    <string name="fecha_de_nacimiento">Fecha de Nacimiento:</string>
    <string name="premios">Premios</string>
    <string name="no_hay_premios_registrados">No hay premios registrados.</string>
    <string name="premio_x">Premio x</string>
    <string name="crear_album">Crear Album</string>
    <string name="nombre">Nombre:</string>
    <string name="cover">Cover:</string>
    <string name="nombre_del_album">Nombre del album:</string>
    <string name="url_de_la_imagen_cover">URL de la imagen/cover</string>
    <string name="fecha_de_salida_al_mercado2">Fecha de salida al mercado</string>
    <string name="descripcion_del_album">Descripcion del album</string>
    <string name="crear">Crear</string>
    <string name="asociar_track_a_album">Asociar track a album</string>
    <string name="asociar">Asociar</string>
    <string name="nombre_del_track">Nombre del Track:</string>
    <string name="duracion">Duracion:</string>
    <string name="asociar_track">Asociar Track</string>
    <string name="duracion_del_track_en_segundos">Duracion del track en segundos:</string>
    <string name="ingresar_como_coleccionista">Ingresar como Coleccionista</string>
    <string name="ingresar_como_visitante">Ingresar como Visitante</string>
    <string name="ver">Ver</string>
    <string name="agregaralbum">agregarAlbum</string>
    <string name="portada">Portada</string>

    <string-array name="generos">
        <item>Classical</item>
        <item>Salsa</item>
        <item>Rock</item>
        <item>Folk</item>
    </string-array>

    <string-array name="casas">
        <item>Sony Music</item>
        <item>EMI</item>
        <item>Discos Fuentes</item>
        <item>Elektra</item>
        <item>Fania Records</item>
    </string-array>
</resources>